package appointment_management;

public class Reminder {
}
