package notification_service;

public class Notification {
}
