package user_management;

public class Receptionist {
}
